public/css/style.css
body {
	font-family: Ubuntu, arial, sans-serif;
	margin-bottom: 0px;
}

a {
	color: #118f9e;
}

.link-black {
	color: #000;
	text-decoration: none;
	border-bottom: 1px solid;
}

.navbar .nav>li>a {
	color: #111;
	text-decoration: underline;
}

div.sidebar .btn-large {
	width: 80%;
	background: #23838f;
}

div.sidebar {
	text-align: center;
}

div.sidebar ul {
	padding-left: 10px;
	padding-top: 10px;
	width: 90%;
}

.sidebar .nav > li {
	float: none;
	text-align: left;
}

.sidebar .nav > li .number-posts {
	float: right;
}

div.navbar-inner {
	height: 30px;
	background: none;
	box-shadow: none;
	border: none;
}

div.navbar-inner input {
	margin-top: 5px;
}

div.sidebar .btn-large {
	width: 80%;
}

h1 {
	font-size: 22px;
	line-height: 24px;
	margin-left: 10px;
	margin-top: 5px;
}

div.start-discussion {
	text-align: center;
	padding-left: 10px;
}

div.start-discussion input,
div.start-discussion textarea,
div.view-discussion textarea {
	width: 98%;
	margin: 0px;
}

div.start-discussion select {
	width: 100%;
	margin: 0px;
}

div.start-discussion h1,
div.view-discussion h1 {
	padding-top: 10px;
	padding-bottom: 10px;
	padding-left: 10px;
	font-size: 26px;
	font-weight: normal;
}

ul.preview-nav {
	margin-bottom: 7px;
}

ul.preview-nav a {
	color: #717171;
}

div#preview-box {
	border: 1px solid #ddd;
	margin: 5px;
	padding: 5px;
	text-align: left;
}

div.view-discussion a.help {
	color: #717171;
	font-size: 0.9em;
}

div.view-discussion pre.sh_sourceCode {
	margin-top: 5px;
	margin-bottom: 5px;
}

div.hot-discussions {
	padding-left: 40px;
	text-align: center;
}

div.view-discussion img {
	width: 48px;
	height: 48px;
	background: #fbfbfc;
}

div.view-discussion div.post-header {
	border: 1px solid #ddd;
	padding: 5px;
	font-size: 12px;
	color: #717171;
}

div.view-discussion div.posts-buttons {
	float: right;
}

div.view-discussion div.posts-buttons i {
	cursor: pointer;
}

div.view-discussion div.post-header span {
	font-weight: bold;
}

div.view-discussion div.post-content {
	background: #fefefe;
	border: 1px solid #eaeaea;
	padding: 10px;
	margin-bottom: 10px;
}

div.view-discussion form.edit-form input {
	margin-bottom: 10px;
	margin-top: 4px;
}

div.view-discussion form.edit-form input.btn-success {
	margin-bottom: 10px;
	width: 100px;
}

.btn-info {
	background: #118f9e;
	box-shadow: inset 0 -4px 0 #0e565f;
}

div.view-discussion td.small {
	width: 50px;
	text-align: center;
	padding: 5px;
}

div.view-discussion td.small a {
	font-size: 12px;
	line-height: 14px;
}

div.hot-discussions span.number-comments,
div.hot-discussions span.date {
	color: #999999;
	font-size: 11px;
	margin-right: 40px;
}

div.hot-discussions span.author {
	font-size: 11px;
}

table.list-posts {
	width: 100%;
}

table.list-posts td {
	border-bottom: 1px solid #eaeaea;
	padding: 10px;
}

table.list-posts td.number {
	width: 35px;
}

table.list-posts td .big-number {
	font-size: 18px;
}

table.list-posts td.no-replies,
table.list-posts td.no-views {
	color: #D14;
}

div.hot-discussions p {
	margin: 0px;
}

div.activity {
	padding: 5px;
	padding-top: 15px;
	height: 40px;
	border: 1px solid #ddd;
}

div.next {
	float: right;
}

div.prev {
	float: left;
}

div.user-profile h1 {
	margin: 0px;
	padding: 0px;
}

div.user-profile table {
	width: 75%;
}

div.user-profile td.small {
	width: 80px;
}

div.user-profile img {
	padding-right: 10px;
}

div.user-profile .nav {
	width: 100%;
}

div.user-profile div.activity {
	border: none;
	border-bottom: 1px solid #ddd;
	height: 30px;
}

div.user-profile select {
	width: auto;
}

span.version {
	float: right;
	font-size: 11px;
}

table.view-list-posts {
	width: 95%;
}

div.collapse {
	background-color: #fafafa;
	background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
	background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
	background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
	background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
	background-repeat: repeat-x;
	border: 1px solid #d4d4d4;
		-webkit-border-radius: 4px;
		 -moz-border-radius: 4px;
			  border-radius: 4px;
	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffffff', endColorstr='#fff2f2f2', GradientType=0);
	*zoom: 1;
	-webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
		 -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
			  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.065);
}

@media (max-width: 767px) {
	body {
		padding-right: 0px;
		padding-left: 0px;
	}
	div.hot-discussions {
		padding-left: 0px;
		padding-right: 0px;
	}
	div.sidebar {
		padding-top: 7px;
		text-align: center;
	}
	div.view-discussion td.small {
		width: 24px;
	}
	div.view-discussion td.small img {
		width: 24px;
		height: 24px;
	}
	div.view-discussion div.post-header,
	div.view-discussion div.post-header span,
	div.view-discussion div.post-header a {
		font-size: 11px;
	}
	ul.nav-tabs a {
		font-size: 12px;
		padding: 5px;
	}
	div.start-discussion h1,
	div.view-discussion h1 {
		padding-left: 0px;
	}
	div.navbar-inner input {
		width: 80%;
		float: auto;
		margin-top: 0px;
		margin-bottom: 5px;
	}
	div.navbar-inner form {
		margin: 0px;
		text-align: center;
	}
	td.remove-image {
		display: none;
	}
	ul.preview-nav {
		width: 100%;
	}
	ul.nav-tabs {
		width: 100%;
	}
	div.sidebar ul {
		width: 95%;
	}
	#footer div.social a,
	#footer div.social label {
		font-size: 12px;
	}
	div.start-discussion form {
		text-align: center;
	}
	div.start-discussion input,
	div.start-discussion textarea {
		width: 92%;
	}
	div.view-discussion textarea {
		width: 97%;
	}
	div.start-discussion select,
	div.start-discussion ul.preview-nav {
		width: 94%;
	}
	div.start-discussion ul.preview-nav {
		margin-left: 10px;
	}
	table.view-list-posts {
		width: 98%;
	}
	table.list-posts td {
		padding: 7px;
	}
	table.list-posts td.number {
		width: 25px;
	}
	table.list-posts td .big-number {
		font-size: 16px;
	}
}

@media (max-width: 800px) {
	div.navbar-inner input {
		margin: 0px;
		width: 70%;
	}
	div.user-profile select {
		width: 220px;
	}
}

.label, .badge {
	color: #717171;
	background: #f2f2f2;
	text-shadow: none;
	font-weight: normal;
}

#wrapper #content .post .copy pre.sh_sourceCode, pre.sh_sourceCode {
	background-color: #Fdfdfe;
}

.alert-success {
	color: #ffffff;
	background-color: #0ec281;
	border-color: #d6e9c6;
}

tr.sticked {
	background: none;
}

tr.sticked a {
	/*font-weight: bold;*/
	color: #118a65;
}

.alert-danger, .alert-error {
	padding: 10px 30px;
	border-bottom: 6px solid #dc590b;
	background: #f38441;
	color: #fff;
}

#footer {
	text-align: center;
	clear: both;
	display: block;
	margin-top: 30px;
}

#footer {
	line-height: 24px;
}

#footer .footer-links {
	width: 100%;
	border-collapse: collapse;
}

#footer .footer-wrap:before {
	content: '';
	display: block;
	height: 2px;
	border-color: #525252;
	border-width: 3px 0 1px;
	border-style: solid none;
	margin-bottom: 24px;
}

#footer .footer-links-title {
	font-weight: bold;
	text-transform: uppercase;
	margin: 0 0 5px;
}

#footer .donate-wrap {
	margin: 10px 0;
	padding: 15px 0;
	border-color: #525252;
	border-width: 1px;
	border-style: solid none;
	font-size: 18px;
	line-height: 24px;
	font-weight: bold;
	text-align: center;
}

#footer .donate-wrap .button {
	margin: 0 10px;
}

.button-small {
	font-size: 14px;
	line-height: 16px;
	padding: 10px 15px;
}

#footer .button.orange {
	background: #f38441;
	color: #fff;
}

#footer .footer-links-title {
	font-weight: bold;
	text-transform: uppercase;
	margin: 0 0 5px;
}

#footer ul.footer-links-list {
	margin: 0;
}

#footer ul.unstyled {
	list-style: none;
	padding: 0;
}

#footer .social-link {
	display: inline-block;
	width: 44px;
	height: 44px;
	text-align: left;
	text-indent: -9999px;
	overflow: hidden;
	background: url('http://phalconphp.com/images/social-links.png');
}

#footer .social-link.tw {
	background-position: 0 0;
}

#footer .social-link.fb {
	background-position: -44px 0;
}

#footer .social-link.gp {
	background-position: -88px 0;
}

#footer .social-link.vm {
	background-position: -132px 0;
}

pre.sh_sourceCode, pre.sh_sourceCode {
	border: none;
	border-left: 3px solid #0ec281;
	border-radius: 0px;
	background: #242424;
	color: #f6f3e8;
	margin-top: 7px;
	margin-bottom: 7px;
}
                
pre.sh_sourceCode span.sh_symbol,
pre.sh_sourceCode span.sh_cbracket, 
pre.sh_sourceCode span.sh_symbol, 
pre.sh_sourceCode span.sh_cbracket {
	color: #99968b;
}

pre.sh_sourceCode span.sh_keyword, pre.sh_sourceCode span.sh_keyword {
	color: #8ac6f2;            
}        

        #wrapper #content .post .copy p {
            margin: 10px 0 0 0;
            padding: 0;
            line-height: 26px;
        }
        #wrapper #content .post .copy pre.sh_sourceCode span.sh_string, pre        .sh_sourceCode span.sh_string {
            color: #95e454;
        }
        #wrapper #content .post .copy pre.sh_sourceCode span.sh_function, pre.sh_sourceCode span.sh_function {        
            color: #cae682;
        }

